...

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">
            <TextView
                android:id="@+id/titleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="TITLE"
                android:textAlignment="viewStart"
...
                android:layout_height="50dp"
                android:src="@drawable/ic_menu_dots_foreground"
                android:layout_gravity="right"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Content"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp"
...
