...
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_menu_foreground"/>

            <ImageView
                android:id="@+id/imgAddNotes"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/wheat"
                android:src="@drawable/ic_add_foreground"/>
...
                    android:fontFamily="monospace"/>
            </LinearLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcViewStore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="horizontal"/>

    </LinearLayout>
...
